chat layout overflow fixes

--- a/assets/styles/layouts/chatLayout.pcss
+++ b/assets/styles/layouts/chatLayout.pcss
@@ -6,7 +6,7 @@
 
 .chat-layout-main,
 .chat-layout-aside {
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -44,6 +44,7 @@
 
 .chat-layout-main__body {
     flex: 1;
+    overflow-y: auto;
 }
 
 .chat-layout-main__footer {
